Chapter14/namespace_orders_disabled_istio-injection.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orders
  labels:
    istio-injection: disabled
