Chapter14/orderservice_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersvc-deployment
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
      - name: orderservice
        image: orderservice:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
