Chapter14/petservice_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petsvc-deployment
  labels:
    app: petservice
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petservice
      version: v1
  template:
    metadata:
      labels:
        app: petservice
        version: v1
    spec:
      containers:
      - name: petservice
        image: petservice:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
