Chapter14/orderservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersvc-deployment
  namespace: orders
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
      - name: orderservice
        image: orderservice:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  namespace: orders
  labels:
    app: orderservice
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: orderservice
