Chapter14/orderservice_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  ports:
  - port: 8080
    name: tcp
    protocol: TCP
    targetPort: 8080
  selector:
    app: orderservice
