Chapter14/petservice_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petservice
  labels:
    app: petservice
    service: petservice
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: petservice
