Chapter14/AuthorizationPolicy_allow-nothing.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: orders-authz-allow-nothing
spec:
  action: ALLOW
