Chapter14/AuthorizationPolicy_deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: orders-authz-deny-all
spec:
  action: DENY
  rules:
  - {}
