Chapter14/RequestAuthentication_istio-system.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: request-authn-default
  namespace: istio-system
spec:
  jwtRules:
  - issuer: "auth-issuer"
    jwksUri: https://xyz.com/.well-known/jwks.json
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt-default
  namespace: istio-system
spec:
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
